Checkout and UI test

--- a/app/views/layouts/_second_header.html.slim
+++ b/app/views/layouts/_second_header.html.slim
@@ -2,5 +2,5 @@
   = render 'layouts/form_search'
   .btn-group
     = render 'layouts/categories_header'
-  .btn-group
+  .btn-group#cart-render
     = render 'layouts/cart'
