--- a/app/views/books/_book.html.slim
+++ b/app/views/books/_book.html.slim
@@ -17,7 +17,7 @@ li.pull-left
     span.price
       = book.unit_price
       | &nbsp;$
-    a.buttona.add-to-cart href="#"
+    = link_to(order_lines_path(order_line: { book_id: book.id }), method: :post, remote: true, class: "buttona add-to-cart") do
       span.hidden= book.id
       span Add &nbsp;
       span
