--- a/app/views/order_lines/index.html.slim
+++ b/app/views/order_lines/index.html.slim
@@ -8,3 +8,6 @@ ul.cart-div
 p.cart-top
   span.cancel= link_to "Continue shopping", books_path
   span.checkout= link_to "Checkout", edit_order_path(@order), class: "buttona"
+.adjust-height
+.adjust-height
+.adjust-height
