--- a/app/assets/javascripts/custom.js.erb
+++ b/app/assets/javascripts/custom.js.erb
@@ -36,4 +36,8 @@ $(function(){
     $("#search-top").submit();
   });
 
+  $(".edit_order_line").on("click", ".submit-quantity", function(){
+    $(this).parent().submit();
+  });
+
 });
