--- a/app/views/layouts/_second_header.html.slim
+++ b/app/views/layouts/_second_header.html.slim
@@ -1,6 +1,7 @@
 .navbar.navbar-search
-  = render 'layouts/form_search'
-  .btn-group
-    = render 'layouts/categories_header'
-  .btn-group#cart-render
-    = render 'layouts/cart'
+  .container
+    = render 'layouts/form_search'
+    .btn-group
+      = render 'layouts/categories_header'
+    .btn-group#cart-render
+      = render 'layouts/cart'
