--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ html
     = csrf_meta_tags
   body
     = render "layouts/header"
-    #container
+    .container
       - flash.each do |key, value|
         div class=("alert alert-#{key}") = value
       #content1
