--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -22,6 +22,7 @@ section.info
       br
       | Published date:&nbsp;
       = @book.published_date
+    p= social_share_button_tag(@book.title)
   .span7
     .book-price
       p.price
