--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<% breadcrumb :signup %>
 <% provide(:title, "Sign up") %>
 <h2 class="title1">Sign up</h2>
 <p class="guide">Fill out the information below</p>
