--- a/app/views/orders/failure.html.slim
+++ b/app/views/orders/failure.html.slim
@@ -1,1 +1,8 @@
-p Fail
+- provide(:title, "Failure")
+br
+p
+  = image_tag "Failure.png"
+  | Fail! Your order could not be processed. Please check your payment information.
+.adjust-height
+.adjust-height
+.adjust-height
