--- a/app/views/orders/success.html.slim
+++ b/app/views/orders/success.html.slim
@@ -1,1 +1,8 @@
-p Success
+- provide(:title, "Success")
+br
+p
+  = image_tag "Success.png"
+  | Success! Your order has been paid and ready for delivery.
+.adjust-height
+.adjust-height
+.adjust-height
