--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -699,6 +699,10 @@ footer {
     }
   }
 
+  #recaptcha_widget_div {
+    margin-left: 180px;
+  }
+
   label {
     width: 180px;
     font-size: 12px;
